--- a/reserve.html
+++ b/reserve.html
@@ -207,7 +207,7 @@
                         <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
 
                         <!-- Submit Button -->
-                        <div class="form-cta">
+                        <div class="form-cta form-cta-mobile">
                           <button type="submit">Send Request</button>
                           <span>Reserve dates now, pay later</span>
                         </div>
