--- a/reserve.html
+++ b/reserve.html
@@ -20,7 +20,7 @@
   <meta name="keywords" content="Rafverktakar, Rafvirki">
   <meta name="author" content="AlltRaf Rafverktakar">  
   <meta http-equiv="Cache-Control" content="max-age=31536000">
-  <meta name="theme-color" content="#2A2E28">
+  <meta name="theme-color" content="#f5f5f5">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
 </head>
 
