--- a/reserve.html
+++ b/reserve.html
@@ -24,7 +24,7 @@
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
 </head>
 
-  <header class="header scrolled">
+  <header class="header scrolled-2">
 
     <div class="header-left-container">
 
