--- a/reserve.html
+++ b/reserve.html
@@ -24,7 +24,9 @@
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
 </head>
 
-  <header class="header scrolled-2">
+
+
+  <header class="header">
 
     <div class="header-left-container">
 
@@ -51,8 +53,32 @@
 
   </header>
 
-
   <body>
+
+    <script>
+      
+      // Get reference to the header and menu button
+      const header = document.querySelector('header');
+      const menuBtn = document.querySelector('#menu-btn');
+
+      // Function to handle scroll event
+      function handleScroll() {
+        if (window.scrollY > 50 || menuBtn.checked) {
+          // Add "scrolled" class when scroll is greater than 50px or menu is open
+          header.classList.add('scrolled');
+        } else {
+          // Remove "scrolled" class when at the top and menu is closed
+          header.classList.remove('scrolled');
+        }
+      }
+
+      // Add the scroll event listener
+      window.addEventListener('scroll', handleScroll);
+
+      // Add event listener for menu toggle
+      menuBtn.addEventListener('change', handleScroll);
+      
+    </script>
 
                 <div class="modal-content modal-content-mobile">
 
