--- a/reserve.html
+++ b/reserve.html
@@ -92,74 +92,81 @@
                       <form action="https://getform.io/f/azyyydzb" method="POST" class="form-post-container">
                         <!-- Package Selection -->
                         <h2 class="form-head">Choose a Package</h2>
-                         <fieldset class="packages">
+                        <div class="packages">
 
-                             <div class="package-row">
-                                 <label class="package">
-                                     <input type="radio" name="package" value="1-day" required>
-                                     <div class="package-content">
-                                         <span class="check-circle"></span> <!-- New element for the circle -->
-                                         <!--<span class="popular-banner">Most Popular</span>-->
-                                         <div class="package-left">
-                                             <h3>1 day tour</h3>
-                                             <span>Dawn to dusk adventure</span>
-                                             <ul>
-                                                 <li><img class="package-icon" src="img/route.svg">One day round trip</li>
-                                                 <li><img class="package-icon" src="img/dine.svg">Lunch & snacks</li>
-                                             </ul>
-                                             <p class="price">From $790 per person</p>
-                                         </div>
-                                     </div>
-                                 </label>
+                          <div class="package-row">
 
-                                 <label class="package" data-most-popular="true">
-                                     <input type="radio" name="package" value="2-day">
-                                     <div class="package-content">
-                                         <span class="check-circle"></span> <!-- New element for the circle -->
-                                         <!--<span class="popular-banner">Most Popular</span>-->
-                                         <div class="package-left">
-                                             <h3>2 day tour</h3>
-                                             <span>Explore the entire area</span>
-                                             <ul>
-                                                 <li><img class="package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
-                                                 <li><img class="package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
-                                             </ul>
-                                             <p class="price">From $1490 per person</p>
-                                         </div>
-                                     </div>
-                                 </label>
-                             </div>
+                              <label class="package">
+                                <input type="radio" name="package" value="1-day" required>
+                                <div class="package-content">
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
+                                  <!--<span class="popular-banner">Most Popular</span>-->
+                                  <div class="package-left">
+                                    <h3>1 day tour</h3>
+                                    <span>Dawn to dusk adventure</span>
+                                    <ul>
+                                      <li><img class = "package-icon" src="img/route.svg">One day round trip</li>
+                                      <li><img class = "package-icon" src="img/dine.svg">Lunch & snacks</li>
+                                    </ul>
+                                    <p class="price">From $790 per person</p>
+                                  </div>
+                                </div>
+                              </label>
 
-                             <div class="package-row">
-                                 <label class="package">
-                                     <input type="radio" name="package" value="3-day">
-                                     <div class="package-content">
-                                         <span class="check-circle"></span> <!-- New element for the circle -->
-                                         <div class="package-left">
-                                             <h3>3 day tour</h3>
-                                             <span>Catch them all!</span>
-                                             <ul>
-                                                 <li><img class="package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
-                                                 <li><img class="package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
-                                             </ul>
-                                             <p class="price">From $2490 per person</p>
-                                         </div>
-                                     </div>
-                                 </label>
+                              <label class="package" data-most-popular="true">
+                                <input type="radio" name="package" value="2-day">
+                                <div class="package-content">
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
+                                  <!--<span class="popular-banner">Most Popular</span>-->
+                                  <div class="package-left">
 
-                                 <label class="package">
-                                     <input type="radio" name="package" value="custom">
-                                     <div class="package-content">
-                                         <span class="check-circle"></span> <!-- New element for the circle -->
-                                         <div class="package-left">
-                                             <h3>Custom tour</h3>
-                                             <span>Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
-                                             <p class="price">Bespoke price</p>
-                                         </div>
-                                     </div>
-                                 </label>
-                             </div>
-                         </fieldset>
+                                    <h3>2 day tour</h3>
+                                    <span>Explore the entire area</span>
+                                    <ul>
+                                      <li><img class = "package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
+                                      <li><img class = "package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
+                                    </ul>
+                                    <p class="price">From $1490 per person</p>
+                                  </div>
+                                </div>
+                              </label>
+
+                          </div>
+
+                          <div class="package-row">
+
+                              <label class="package">
+                                <input type="radio" name="package" value="3-day">
+                                <div class="package-content">
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
+                                  <div class="package-left">
+                                    <h3>3 day tour</h3>
+                                    <span>Catch them all!</span>
+                                    <ul>
+                                      <li><img class = "package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
+                                      <li><img class = "package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
+                                    </ul>
+                                    <p class="price">From $2490 per person</p>
+                                  </div>
+                                </div>
+                              </label>
+
+                              <label class="package">
+                                <input type="radio" name="package" value="3-day">
+                                <div class="package-content">
+                                  <span class="check-circle"></span> <!-- New element for the circle -->
+                                  <div class="package-left">
+                                    <h3>Custom tour</h3>
+                                    <span>Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
+
+                                    <p class="price">Bespoke price</p>
+                                  </div>
+                                </div>
+                              </label>
+
+                         </div>     
+
+                        </div>
 
 
                         <!-- Group Size -->
