--- a/reserve.html
+++ b/reserve.html
@@ -103,7 +103,7 @@
                                   <!--<span class="popular-banner">Most Popular</span>-->
                                   <div class="package-left">
                                     <h3>1 day tour</h3>
-                                    <span>Dawn to dusk adventure</span>
+                                    <span class = "package-span">Dawn to dusk adventure</span>
                                     <ul>
                                       <li><img class = "package-icon" src="img/route.svg">One day round trip</li>
                                       <li><img class = "package-icon" src="img/dine.svg">Lunch & snacks</li>
@@ -121,7 +121,7 @@
                                   <div class="package-left">
 
                                     <h3>2 day tour</h3>
-                                    <span>Explore the entire area</span>
+                                    <span class = "package-span">Explore the entire area</span>
                                     <ul>
                                       <li><img class = "package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
                                       <li><img class = "package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
@@ -141,7 +141,7 @@
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
                                     <h3>3 day tour</h3>
-                                    <span>Catch them all!</span>
+                                    <span class = "package-span">Catch them all!</span>
                                     <ul>
                                       <li><img class = "package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
                                       <li><img class = "package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
@@ -157,7 +157,7 @@
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
                                     <h3>Custom tour</h3>
-                                    <span>Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
+                                    <span class = "package-span">Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
 
                                     <p class="price">Bespoke price</p>
                                   </div>
