--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
                                     <div class="faq-question">
                                       <h5>Can I customize our tour?</h5>
-                                      <p>Absolutely! We work with top travel agencies in Iceland and can expand your adventure to include other fly fishing hotspots or exciting activities like highland trekking, snowmobiling, helicopter rides, or whatever else you can dream up. Let us know your vision, and we’ll make it happen!</p>x
+                                      <p">Absolutely! We work with top travel agencies in Iceland and can expand your adventure to include other fly fishing hotspots or exciting activities like highland trekking, snowmobiling, helicopter rides, or whatever else you can dream up. Let us know your vision, and we’ll make it happen!</p>
                                     </div>
 
                                     <div class="faq-question">
@@ -588,7 +588,7 @@
                           <div class="package-row">
 
                               <label class="package">
-                                <input type="radio" name="package" value="1-day" required>
+                                <input type="radio" name="package" value="day-1" required>
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <!--<span class="popular-banner">Most Popular</span>-->
@@ -605,7 +605,7 @@
                               </label>
 
                               <label class="package" data-most-popular="true">
-                                <input type="radio" name="package" value="2-day">
+                                <input type="radio" name="package" value="day-2">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <!--<span class="popular-banner">Most Popular</span>-->
@@ -627,7 +627,7 @@
                           <div class="package-row">
 
                               <label class="package">
-                                <input type="radio" name="package" value="3-day">
+                                <input type="radio" name="package" value="day-3">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
@@ -643,12 +643,12 @@
                               </label>
 
                               <label class="package">
-                                <input type="radio" name="package" value="3-day">
+                                <input type="radio" name="package" value="day-4">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
                                     <h3>Custom tour</h3>
-                                    <span>Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
+                                    <span class="bespoke">Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
 
                                     <p class="price">Bespoke price</p>
                                   </div>
@@ -702,7 +702,8 @@
                                 <option value="" disabled selected>Choose pick-up location</option>
                                 <option value="location1">Reykjavík central area</option>
                                 <option value="location2">Keflavík Airport</option>
-                                <option value="location2">Other / Outside of center area</option>
+                                <option value="location3">Other / Outside of center area</option>
+                                <option value="location4">Pick-up and drop-off not needed</option>
                               </select>
                             </div>
                           </div>
