--- a/email.html
+++ b/email.html
@@ -247,16 +247,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservation Confirmation</title>
-    <meta name="color-scheme" content="only">
+
+    <style type="text/css">
+
+      @media only screen and (max-width: 880px){
+
+      table{
+        width: 100%;
+      }
+
+    }
+
+
+    </style>
+
 </head>
-<body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
+<body style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #f0f0f0;">
     <table width="100%" cellpadding="0" cellspacing="0" border="0" style=" padding: 20px 0;">
         <tr>
             <td align="center">
-                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C; border-radius: 16px;">
+                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
                     <tr>
                         <td align="center" style="padding: 20px;">
-                            <img src="https://www.wildline.is/img/email/logo.png" style="display: block; height: 57px; width: 67px;" alt="Wild Line Logo">
+                            <img src="https://www.wildline.is/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
                         </td>
                     </tr>
                     <tr>
@@ -266,33 +279,37 @@
                     </tr>
                     <tr>
                         <td style="padding: 20px 32px;">
-                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px;">
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px;">
                                 <tr>
-                                    <td style="color: #ffffff; font-size: 16px; font-weight: bold; padding: 14px;">TOUR PACKAGE</td>
+                                    <td style="color: #ffffff; font-size: 16px; font-weight: bold; padding-bottom: 10px;">
+                                        TOUR PACKAGE
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td style="color: #ffffff; font-size: 14px; font-weight: normal; padding: 0 14px;">2 day tour</td>
+                                    <td style="color: #ffffff; font-size: 14px; font-weight: normal; padding-bottom: 10px;">
+                                        2 day tour
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td style="padding: 14px;">
-                                        <table width="100%" cellpadding="0" cellspacing="0" border="0">
+                                    <td>
+                                        <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size: 12px; line-height: 16px; color: #ffffff;">
                                             <tr>
-                                                <td valign="top" width="20" style="padding-right: 10px;">
-                                                    <img src="https://www.wildline.is/img/email/house.png" style="display: block; height: 16px; width: 13px;" alt="Lodge Icon">
+                                                <td valign="top" width="20">
+                                                    <img src="https://www.wildline.is/img/email/house.png" style="display: block; height: 16px; width: 13px;">
                                                 </td>
-                                                <td style="color: #ffffff; font-size: 14px;">1 night in Lodge Lýsa</td>
+                                                <td>1 night in Lodge Lýsa</td>
                                             </tr>
                                             <tr>
-                                                <td valign="top" width="20" style="padding: 6px 10px 0 0;">
-                                                    <img src="https://www.wildline.is/img/email/fork.png" style="display: block; height: 16px; width: 13px;" alt="Meal Icon">
+                                                <td valign="top" width="20" style="padding-top: 6px;">
+                                                    <img src="https://www.wildline.is/img/email/fork.png" style="display: block; height: 16px; width: 13px;">
                                                 </td>
-                                                <td style="color: #ffffff; font-size: 14px;">Breakfast, lunch, dinner</td>
+                                                <td style="padding-top: 6px;">Breakfast, lunch, dinner</td>
                                             </tr>
                                             <tr>
-                                                <td valign="top" width="20" style="padding: 6px 10px 0 0;">
-                                                    <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 16px; width: 13px;" alt="Airport Pickup Icon">
+                                                <td valign="top" width="20" style="padding-top: 6px;">
+                                                    <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 16px; width: 13px;">
                                                 </td>
-                                                <td style="color: #ffffff; font-size: 14px;">Pick-up at KEF Airport</td>
+                                                <td style="padding-top: 6px;">Pick-up at KEF Airport</td>
                                             </tr>
                                         </table>
                                     </td>
