--- a/email.html
+++ b/email.html
@@ -278,8 +278,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding: 20px 32px;">
-                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px;">
+                      <td style="padding: 20px 32px; background-image: url('img/email/back-lighter.png'); background-repeat: repeat;">                       
+
+                        <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px;">
                                 <tr>
                                     <td style="color: #ffffff; font-size: 16px; font-weight: bold; padding-bottom: 10px;">
                                         TOUR PACKAGE
