--- a/email.html
+++ b/email.html
@@ -20,7 +20,7 @@
     </style>
 
 </head>
-<body style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #f0f0f0;">
+<body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
     <table width="100%" cellpadding="0" cellspacing="0" border="0" style=" padding: 20px 0;">
         <tr>
             <td align="center">
@@ -44,30 +44,30 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td style="color: #ffffff; font-size: 20px; font-weight: bold; padding-bottom: 10px;">
+                                    <td style="color: #ffffff; font-size: 24px; font-weight: bold; padding-bottom: 10px;">
                                         2 day tour
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size: 12px; font-weight: bold; line-height: 16px; color: #ffffff;">
+                                        <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size: 14px; font-weight: bold; line-height: 16px; color: #ffffff;">
                                             <tr>
                                                 <td valign="top" width="20">
                                                     <img src="https://www.wildline.is/img/email/house.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
-                                                <td>1 night in Lodge Lýsa</td>
+                                                <td style="padding-left: 4px;">1 night in Lodge Lýsa</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
                                                     <img src="https://www.wildline.is/img/email/fork.png" style="display: block; height: 20; width: 16px;">
                                                 </td>
-                                                <td style="padding-top: 6px;">Breakfast, lunch, dinner</td>
+                                                <td style="padding-top: 6px; padding-left: 4px;">Breakfast, lunch, dinner</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
                                                     <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
-                                                <td style="padding-top: 6px;">Pick-up at KEF Airport</td>
+                                                <td style="padding-top: 6px; padding-left: 4px;">Pick-up at KEF Airport</td>
                                             </tr>
                                         </table>
 
@@ -122,6 +122,28 @@
                                 </tr>
                             </table>
 
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: transparent; border-radius: 8px; margin-top: 10px;">
+                                <tr>
+                                    <td align="center" valign="middle" style="text-align: center; vertical-align: middle; padding: 20px 0;">
+                                        <!-- Wrapper table for precise alignment -->
+                                        <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
+                                            <tr>
+                                                <td>
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.is/img/email/staff.jpg" alt="Staff Image">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="color: #ffffff; font-size: 15px; font-weight: bold; padding-top: 10px; text-align: center;">
+                                                    We’ll get back to you as soon as possible with an<br>
+                                                    exact quote, payment link, and answers to any<br>
+                                                    questions you might have.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
 
                         </td>
                     </tr>
