--- a/email.html
+++ b/email.html
@@ -1,4 +1,175 @@
+<!-- 1 day -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reservation Confirmation</title>
+
+    <style type="text/css">
+
+      @media only screen and (max-width: 880px){
+
+      table{
+        width: 100%;
+      }
+
+    }
+
+    </style>
+
+</head>
+<body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" style=" padding: 20px 0;">
+        <tr>
+            <td align="center">
+                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
+                    <tr>
+                        <td align="center" style="padding: 20px;">
+                            <img src="https://www.wildline.is/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <h1 style="color: #ffffff; font-size: 32px; font-weight: bold; text-align: center; margin: 0;">Your Reservation<br>for River Lýsa</h1>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 20px 32px;">
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px;">
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 12px; font-weight: bold; padding-bottom: 10px;">
+                                        TOUR PACKAGE
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 24px; font-weight: bold; padding-bottom: 10px;">
+                                        1 day tour
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size: 14px; font-weight: bold; line-height: 16px; color: #ffffff;">
+                                            <tr>
+                                                <td valign="top" width="20">
+                                                    <img src="https://www.wildline.is/img/email/day.png" style="display: block; height: 20px; width: 16px;">
+                                                </td>
+                                                <td style="padding-left: 4px;">One day round trip</td>
+                                            </tr>
+                                            <tr>
+                                                <td valign="top" width="20" style="padding-top: 6px;">
+                                                    <img src="https://www.wildline.is/img/email/fork.png" style="display: block; height: 20; width: 16px;">
+                                                </td>
+                                                <td style="padding-top: 6px; padding-left: 4px;">Breakfast and lunch</td>
+                                            </tr>
+                                            <tr>
+                                                <td valign="top" width="20" style="padding-top: 6px;">
+                                                    <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
+                                                </td>
+                                                <td style="padding-top: 6px; padding-left: 4px;">Pick-up outside center / other</td>
+                                            </tr>
+                                        </table>
+
+                                        
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px; margin-top: 10px;">
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 12px; font-weight: bold; padding-bottom: 10px;">
+                                        TRAVEL DATE
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 16px; font-weight: Regular; padding-bottom: 10px;">
+                                        July 17th 2024
+                                    </td>
+                                </tr>
+                                <tr>
+                                </tr>
+                            </table>
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px; margin-top: 10px;">
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 12px; font-weight: bold; padding-bottom: 10px;">
+                                        CONTACT INFORMATION
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 16px; font-weight: Regular; padding-bottom: 10px;">
+                                        Jonathan K. Wilson<br>
+                                        jon.k.wil@outlook.com
+                                    </td>
+                                </tr>
+                                <tr>
+                                </tr>
+                            </table>
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px; margin-top: 10px;">
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 12px; font-weight: bold; padding-bottom: 10px;">
+                                        COMMENT
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 16px; font-weight: Regular; padding-bottom: 10px;">
+                                   How kid friendly is this tour and what are the chances of a beginner catching a fish? Do we need to bring anything?
+                                    </td>
+                                </tr>
+                                <tr>
+                                </tr>
+                            </table>
+
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: transparent; border-radius: 8px; margin-top: 10px;">
+                                <tr>
+                                    <td align="center" valign="middle" style="text-align: center; vertical-align: middle; padding: 20px 0;">
+                                        <!-- Wrapper table for precise alignment -->
+                                        <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
+                                            <tr>
+                                                <td>
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.is/img/email/staff.jpg" alt="Staff Image">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="color: #ffffff; font-size: 15px; font-weight: bold; padding-top: 10px; text-align: center;">
+                                                    We’ll get back to you as soon as possible with an
+                                                    exact quote, payment link, and answers to any
+                                                    questions you might have.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 2 days -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -135,8 +306,8 @@
                                             </tr>
                                             <tr>
                                                 <td style="color: #ffffff; font-size: 15px; font-weight: bold; padding-top: 10px; text-align: center;">
-                                                    We’ll get back to you as soon as possible with an<br>
-                                                    exact quote, payment link, and answers to any<br>
+                                                    We’ll get back to you as soon as possible with an
+                                                    exact quote, payment link, and answers to any
                                                     questions you might have.
                                                 </td>
                                             </tr>
