--- a/thank-you.html
+++ b/thank-you.html
@@ -79,7 +79,7 @@
         if (email) {
           emailDisplay.textContent = email;
         } else {
-          emailDisplay.textContent = "an unknown email address";
+          emailDisplay.textContent = "your email address";
         }
       });
     </script>
