--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                               </label>
 
                               <label class="package">
-                                <input type="radio" name="package" value="day-4">
+                                <input type="radio" name="package" value="3-day">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
@@ -700,10 +700,10 @@
                               <label for="pickup-location">Pick-up location</label>
                               <select id="pickup-location" class="custom-select" name="pickup-location" required>
                                 <option value="" disabled selected>Choose pick-up location</option>
-                                <option value="location1">Reykjavík central area</option>
-                                <option value="location2">Keflavík Airport</option>
-                                <option value="location3">Other / Outside of center area</option>
-                                <option value="location4">Pick-up and drop-off not needed</option>
+                                <option value="Pick-up in Reykjavík Central">Reykjavík central area</option>
+                                <option value="Pick-up at KEF airport">Keflavík Airport</option>
+                                <option value="Pick-up outside of center area">Other / Outside of center area</option>
+                                <option value="Pick-up and drop-off not needed">Pick-up and drop-off not needed</option>
                               </select>
                             </div>
                           </div>
