--- a/email.html
+++ b/email.html
@@ -69,6 +69,12 @@
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">Pick-up outside center / other</td>
                                             </tr>
+                                            <tr>
+                                                <td valign="top" width="20" style="padding-top: 6px;">
+                                                    <img src="https://www.wildline.is/img/email/fam.png" style="display: block; height: 20px; width: 16px;">
+                                                </td>
+                                                <td style="padding-top: 6px; padding-left: 4px;">5 person group</td>
+                                            </tr>
                                         </table>
 
                                         
@@ -239,6 +245,12 @@
                                                     <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">Pick-up at KEF Airport</td>
+                                            </tr>
+                                            <tr>
+                                                <td valign="top" width="20" style="padding-top: 6px;">
+                                                    <img src="https://www.wildline.is/img/email/fam.png" style="display: block; height: 20px; width: 16px;">
+                                                </td>
+                                                <td style="padding-top: 6px; padding-left: 4px;">5 person group</td>
                                             </tr>
                                         </table>
 
