--- a/email.html
+++ b/email.html
@@ -27,7 +27,7 @@
                 <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
                     <tr>
                         <td align="center" style="padding: 20px;">
-                            <img src="https://www.wildline.is/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
+                            <img src="https://www.wildline.fishing/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
                         </td>
                     </tr>
                     <tr>
@@ -53,25 +53,25 @@
                                         <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size: 14px; font-weight: bold; line-height: 16px; color: #ffffff;">
                                             <tr>
                                                 <td valign="top" width="20">
-                                                    <img src="https://www.wildline.is/img/email/day.png" style="display: block; height: 20px; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/day.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-left: 4px;">One day round trip</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
-                                                    <img src="https://www.wildline.is/img/email/fork.png" style="display: block; height: 20; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/fork.png" style="display: block; height: 20; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">Breakfast and lunch</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
-                                                    <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">Pick-up outside center / other</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
-                                                    <img src="https://www.wildline.is/img/email/fam.png" style="display: block; height: 20px; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/fam.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">5 person group</td>
                                             </tr>
@@ -136,7 +136,7 @@
                                         <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
                                             <tr>
                                                 <td>
-                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.is/img/email/staff.jpg" alt="Staff Image">
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.jpg" alt="Staff Image">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -204,7 +204,7 @@
                 <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
                     <tr>
                         <td align="center" style="padding: 20px;">
-                            <img src="https://www.wildline.is/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
+                            <img src="https://www.wildline.fishing/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
                         </td>
                     </tr>
                     <tr>
@@ -230,25 +230,25 @@
                                         <table width="100%" cellpadding="0" cellspacing="0" border="0" style="font-size: 14px; font-weight: bold; line-height: 16px; color: #ffffff;">
                                             <tr>
                                                 <td valign="top" width="20">
-                                                    <img src="https://www.wildline.is/img/email/house.png" style="display: block; height: 20px; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/house.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-left: 4px;">1 night in Lodge Lýsa</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
-                                                    <img src="https://www.wildline.is/img/email/fork.png" style="display: block; height: 20; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/fork.png" style="display: block; height: 20; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">Breakfast, lunch, dinner</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
-                                                    <img src="https://www.wildline.is/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/pin.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">Pick-up at KEF Airport</td>
                                             </tr>
                                             <tr>
                                                 <td valign="top" width="20" style="padding-top: 6px;">
-                                                    <img src="https://www.wildline.is/img/email/fam.png" style="display: block; height: 20px; width: 16px;">
+                                                    <img src="https://www.wildline.fishing/img/email/fam.png" style="display: block; height: 20px; width: 16px;">
                                                 </td>
                                                 <td style="padding-top: 6px; padding-left: 4px;">5 person group</td>
                                             </tr>
@@ -313,7 +313,7 @@
                                         <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
                                             <tr>
                                                 <td>
-                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.is/img/email/staff.jpg" alt="Staff Image">
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.jpg" alt="Staff Image">
                                                 </td>
                                             </tr>
                                             <tr>
