--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 
     <div class="header-left-container">
 
+      <a style = "all: unset;" href="index.html">
     <svg width="69" height="57" viewBox="0 0 69 57" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" clip-rule="evenodd" d="M25.5918 27.3086H31.383V39.7865H25.5918V27.3086ZM46.0998 39.7868V35.4565H39.1956V27.3176H33.4045V39.7868H46.0998ZM55.0867 27.3176H47.4087V39.7868H54.5737C56.5563 39.7868 58.2055 39.497 59.5214 38.9173C60.8431 38.3376 61.817 37.5695 62.4431 36.613C63.0691 35.6565 63.3822 34.6072 63.3822 33.4652C63.3822 32.2769 63.072 31.2189 62.4518 30.2914C61.8373 29.3639 60.9069 28.6364 59.6605 28.1089C58.42 27.5813 56.8954 27.3176 55.0867 27.3176ZM56.4606 35.3956C56.0027 35.8768 55.3418 36.1173 54.4781 36.1173H53.1998V30.987H54.6868C55.5099 30.987 56.1244 31.216 56.5302 31.674C56.9418 32.1261 57.1476 32.7203 57.1476 33.4565C57.1476 34.2681 56.9186 34.9145 56.4606 35.3956ZM21.3443 39.7868L24.4051 27.3176H18.6661L17.2487 33.8739L15.5531 27.3176H9.64026L8.03161 33.7174L6.67512 27.3176H0.901367L4.01433 39.7868H10.6837L12.2315 33.5696L13.8923 39.7868H21.3443ZM68.424 53.2936V56.9804H56.0157V44.5112H68.3893V48.1981H61.8068V49.3024H68.0936V52.0849H61.8068V53.2936H68.424ZM54.003 56.9804V44.5112H49.0988V51.3545L45.7511 44.5112H38.6382V56.9804H43.5598V50.0937L47.0206 56.9804H54.003ZM30.8255 44.5023H36.6167V56.9802H30.8255V44.5023ZM29.5171 56.98V52.6497H22.6129V44.5108H16.8218V56.98H29.5171Z" fill="white"/>
       <path fill-rule="evenodd" clip-rule="evenodd" d="M43.6324 6.85283H47.7155C50.2263 6.85283 52.2618 8.8883 52.2618 11.3992V15.6129C52.2618 18.1237 50.2263 20.1592 47.7155 20.1592L38.0683 20.1592V20.1585H32.8667C32.7339 20.1585 32.7086 19.9471 32.8367 19.912C35.9601 19.0551 39.0443 17.3723 41.1649 15.0482C41.248 14.9571 41.397 15.0151 41.3848 15.1378C41.2822 16.1657 40.7289 17.215 39.5577 18.1632L47.7155 18.1632C49.124 18.1632 50.2658 17.0214 50.2658 15.6129V11.3992C50.2658 9.99063 49.124 8.84879 47.7155 8.84879H41.6499L45.3626 11.8021C45.5237 11.9302 45.4386 12.1895 45.233 12.1973L40.6964 12.3695L36.1993 9.14521C36.0967 9.07162 35.9705 9.19943 36.0455 9.30111L38.3715 12.4578L36.905 12.5135L32.2071 9.14521C32.1045 9.07162 31.9783 9.19943 32.0533 9.30111L34.4879 12.6053L28.668 12.8263C28.4388 12.835 28.2152 12.7547 28.0441 12.6021L23.833 8.84879H21.734C21.2058 9.29576 20.5229 9.72643 19.7394 10.0818C17.6298 11.0386 15.5897 11.0872 15.1829 10.1902C14.7761 9.29322 16.1565 7.7904 18.2662 6.83355C19.9966 6.04867 21.6803 5.87496 22.4541 6.33292C24.7433 4.74873 27.6515 2.68274 28.7866 1.87446C29.1034 1.64885 29.4782 1.52083 29.8669 1.50541L35.2224 1.293L30.2866 4.86306C30.1801 4.94003 30.2722 5.10537 30.3937 5.05548L40.0176 1.10281L44.4906 0.925402L39.0466 4.86306C38.9402 4.94003 39.0322 5.10537 39.1537 5.05548L49.714 0.718233L58.0892 0.386054C58.4627 0.371237 58.5729 0.888799 58.2257 1.0274L43.6324 6.85283ZM21.1447 7.48645C21.0414 7.25861 19.9988 7.5088 18.816 8.04527C17.6332 8.58174 16.7581 9.20134 16.8614 9.42918C16.9647 9.65703 18.0074 9.40683 19.1902 8.87036C20.373 8.33389 21.2481 7.71429 21.1447 7.48645Z" fill="#B6DB91"/>
     </svg>
+    </a>
+
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
 
@@ -1164,87 +1167,6 @@
             });
         });
 
-    </script>
-
-    <script type="text/javascript">
-      document.addEventListener("DOMContentLoaded", () => {
-          const element = document.querySelector("#pickup-date");
-
-          if (element) {
-              console.log("Flatpickr initializing...");
-
-              flatpickr(element, {
-                  dateFormat: "Y-m-d", // Backend format
-                  altInput: true, // User-friendly display format
-                  altFormat: "F j, Y", // User-visible format
-                  minDate: "2025-06-01", // Start of date range (June 1, 2025)
-                  maxDate: "2025-09-30", // End of date range (September 30, 2025)
-                  nextArrow: `
-                      <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <rect width="36" height="36" rx="18" transform="matrix(-1 0 0 1 36 0)" fill="#F5F5F5"/>
-                          <path d="M23.0024 17.7119C22.9976 17.5264 22.9609 17.3579 22.8926 17.2065C22.8242 17.0503 22.7168 16.8989 22.5703 16.7524L17.0332 11.3325C16.8086 11.1128 16.5376 11.0029 16.2202 11.0029C16.0054 11.0029 15.8101 11.0566 15.6343 11.1641C15.4536 11.2666 15.3096 11.4058 15.2021 11.5815C15.0947 11.7573 15.041 11.9526 15.041 12.1675C15.041 12.4946 15.168 12.7803 15.4219 13.0244L20.2485 17.7046L15.4219 22.3921C15.168 22.646 15.041 22.9341 15.041 23.2563C15.041 23.4712 15.0947 23.6665 15.2021 23.8423C15.3096 24.0181 15.4536 24.1572 15.6343 24.2598C15.8101 24.3672 16.0054 24.4209 16.2202 24.4209C16.5376 24.4209 16.8086 24.3086 17.0332 24.084L22.5703 18.6641C22.7217 18.5176 22.8315 18.3687 22.8999 18.2173C22.9683 18.061 23.0024 17.8926 23.0024 17.7119Z" fill="#2C2E2C"/>
-                      </svg>
-                  `,
-                  prevArrow: `
-                      <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <rect width="36" height="36" rx="18" fill="#F5F5F5"/>
-                          <path d="M13.0332 17.7119C13.038 17.5264 13.0747 17.3579 13.1429 17.2065C13.2113 17.0503 13.3187 16.8989 13.4652 16.7524L18.998 11.3325C19.2226 11.1128 19.4936 11.0029 19.811 11.0029C20.0258 11.0029 20.2211 11.0566 20.3969 11.1641C20.5776 11.2666 20.7216 11.4058 20.8291 11.5815C20.9365 11.7573 20.9902 11.9526 20.9902 12.1675C20.9902 12.4946 20.8632 12.7803 20.6093 13.0244L15.775 17.7046L20.6093 22.3921C20.8632 22.646 20.9902 22.9341 20.9902 23.2563C20.9902 23.4712 20.9365 23.6665 20.8291 23.8423C20.7216 24.0181 20.5776 24.1572 20.3969 24.2598C20.2211 24.3672 20.0258 24.4209 19.811 24.4209C19.4936 24.4209 19.2226 24.3086 18.998 24.084L13.4652 18.6641C13.3138 18.5176 13.204 18.3687 13.1356 18.2173C13.0672 18.061 13.0332 17.8926 13.0332 17.7119Z" fill="#2C2E2C"/>
-                      </svg>
-                  `,
-                  onReady: (selectedDates, dateStr, instance) => {
-                      console.log("Flatpickr ready!");
-
-                      // Get the calendar container
-                      const calendar = instance.calendarContainer;
-
-                      if (calendar) {
-                          const adjustPosition = () => {
-                              // Get viewport and element details
-                              const viewportWidth = window.innerWidth;
-                              const viewportHeight = window.innerHeight;
-                              const calendarWidth = calendar.offsetWidth;
-                              const calendarHeight = calendar.offsetHeight;
-
-                              const inputRect = element.getBoundingClientRect();
-
-                              // Decide whether to center or align to input
-                              const centerHorizontally = viewportWidth >= 768; // Center on larger screens
-                              const centerVertically = viewportHeight >= 768; // Center on larger screens
-
-                              if (centerHorizontally && centerVertically) {
-                                  // Center the calendar in the viewport
-                                  calendar.style.position = "fixed";
-                                  calendar.style.top = `${(viewportHeight - calendarHeight) / 2}px`;
-                                  calendar.style.left = `${(viewportWidth - calendarWidth) / 2}px`;
-                              } else {
-                                  // Align to input field
-                                  calendar.style.position = "absolute";
-                                  calendar.style.top = `${inputRect.bottom + window.scrollY}px`;
-                                  calendar.style.left = `${inputRect.left + window.scrollX}px`;
-                              }
-
-                              calendar.style.zIndex = 9999; // Ensure it's on top
-                          };
-
-                          // Adjust positioning on ready
-                          adjustPosition();
-
-                          // Reposition on window resize
-                          window.addEventListener("resize", adjustPosition);
-
-                          // Reposition when input is focused
-                          element.addEventListener("focus", adjustPosition);
-                      }
-                  },
-                  onChange: (selectedDates, dateStr) => {
-                      console.log("Selected date:", dateStr);
-                  },
-              });
-          } else {
-              console.error("Element #pickup-date not found!");
-          }
-
-      });
     </script>
 
     <script>
