--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="gallery-3">
 
                           <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery">
-                            <img loading="lazy" class="gallery-img-last gallery-hide" src="img/g1-5.jpg">
+                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg">
                           </a>
 
                         </div>
@@ -326,6 +326,11 @@
 
                       </div>
 
+                      <div class="gallery-3">
+                        <a href="img/g2-5-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                          <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-5.jpg">
+                        </a>
+                      </div>
 
                       <!-- Hidden gallery -->
 
@@ -353,7 +358,7 @@
                       </a>
                       <a href="img/gallery-2/12.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                       </a>
-                      <a href="img/gallery-2/13.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                      <a href="img/gallery-2/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                       </a>
 
 
