--- a/reserve.html
+++ b/reserve.html
@@ -20,7 +20,7 @@
   <meta name="keywords" content="Rafverktakar, Rafvirki">
   <meta name="author" content="AlltRaf Rafverktakar">  
   <meta http-equiv="Cache-Control" content="max-age=31536000">
-  <meta name="theme-color" content="#2A2E28">
+  <meta name="theme-color" content="#f5f5f5">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
 </head>
 
@@ -158,9 +158,9 @@
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
                                     <h3>Custom tour</h3>
-                                    <span class = "package-span">Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
+                                    <span class = "package-span custom-show">Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
 
-                                    <p class="price">Bespoke price</p>
+                                    <p class="price desktop-show">Bespoke price</p>
                                   </div>
                                 </div>
                               </label>
@@ -205,7 +205,7 @@
                             </div>
                           </div>
 
-                          <div class="form-field">
+                          <div class="form-field split">
                             <div class="input-container custom-select">
                               <label for="pickup-location">Pick-up location</label>
                               <select id="pickup-location" class="custom-select" name="pickup-location" required>
